Modifications to permissions

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Example code for a paywall proxy in Node.js",
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "http-proxy-middleware": "^3.0.5",
