--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "1.0.0",
   "main": "Proxy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "Example code for a paywall proxy in Node.js",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^16.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1"
-  }
+    "morgan": "^1.10.1",
+    "mysql2": "^3.14.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/testingillusions/paywall-proxy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/testingillusions/paywall-proxy/issues"
+  },
+  "homepage": "https://github.com/testingillusions/paywall-proxy#readme"
 }
