Updated domain parameter

--- a/.env.default.yaml
+++ b/.env.default.yaml
@@ -4,7 +4,7 @@ USE_HTTPS=false
 
 # Target application URL
 TARGET_URL=https://example.com
-
+TARGET_URI=example.com
 # Database connection
 DB_HOST=localhost
 DB_USER=mydbuser
